--- a/main.html
+++ b/main.html
@@ -7,6 +7,16 @@
 </head>
 
 <body>
+	<img alt="Image" src="https://images.pexels.com/photos/1624496/pexels-photo-1624496.jpeg?auto=compress&cs=tinysrgb&w=600">
+	<h1>Portfolio</h1>
+	<ul>
+		<li>Manager</li>
+		<li>Supervisor</li>
+		<li>Attendent</li>
+	</ul>
+	<nav>This is navbar</nav>
+
+	
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
