--- a/main.html
+++ b/main.html
@@ -7,14 +7,14 @@
 </head>
 
 <body>
-	<img alt="Image" src="https://images.pexels.com/photos/1624496/pexels-photo-1624496.jpeg?auto=compress&cs=tinysrgb&w=600">
-	<h1>Portfolio</h1>
-	<ul>
-		<li>Manager</li>
-		<li>Supervisor</li>
-		<li>Attendent</li>
+	<img role="img" alt="Image" src="https://images.pexels.com/photos/1624496/pexels-photo-1624496.jpeg?auto=compress&cs=tinysrgb&w=600">
+	<h1 role="heading">Portfolio</h1>
+	<ul role="list">
+		<li role="listitem">Manager</li>
+		<li role="listitem">Supervisor</li>
+		<li role="listitem">Attendent</li>
 	</ul>
-	<nav>This is navbar</nav>
+	<nav role="navigation">This is navbar</nav>
 
 	
 	<!-- the entire body must be written by student -->
